# telemy

./: .gitignore  AGENTS.md  DEVELOPMENT.md  HANDOFF_STATUS.md  OBWS_207_FIX.md  README.md  RELEASE_NOTES.md  aegis-dock-bridge-host.js  aegis-dock-bridge.js  aegis-dock-browser-host-bootstrap.js  aegis-dock.html  aegis-relay-sg-policy.json
aegis-control-plane/: README.md  go.mod  go.sum
aegis-control-plane/cmd/api/: main.go  main_test.go
aegis-control-plane/cmd/jobs/: main.go
aegis-control-plane/internal/api/: handlers.go  handlers_stop_test.go  router.go
aegis-control-plane/internal/auth/: jwt.go
aegis-control-plane/internal/config/: config.go
aegis-control-plane/internal/jobs/: runner.go
aegis-control-plane/internal/metrics/: metrics.go  metrics_test.go
aegis-control-plane/internal/model/: types.go
aegis-control-plane/internal/relay/: aws.go  aws_test.go  fake.go  provisioner.go
aegis-control-plane/internal/store/: store.go  store_stop_test.go
aegis-control-plane/migrations/: 0001_init.sql  0002_relay_manifest.sql
docs/: API_SPEC_v1.md  ARCHITECTURE.md  CURRENT_STATUS.md  DB_SCHEMA_v1.md  DOCK_TERMINOLOGY_ALIGNMENT_v0.0.3.md  IPC_PROTOCOL_v1.md  OPERATIONS_METRICS.md  QA_CHECKLIST_MULTI_OUTPUT.md  QA_CHECKLIST_OBS_CEF_DOCK_ACTION_LOOP.md  QA_CHECKLIST_OBS_DOCK_SCENE_RULES.md  QA_CHECKLIST_RELAY_TELEMETRY.md  README.md  STATE_MACHINE_v1.md  TRIAGE_CODE_REVIEW_2026_02_28.md
obs-plugin-shim/: CMakeLists.txt  README.md  configure-obs-cef.ps1  deploy-to-obs.ps1  dev-cycle.ps1  run-dev-session.ps1  run-strict-cycle.ps1  run-ui-smoke.ps1  stop-dev-session.ps1  validate-obs-log.ps1
obs-plugin-shim/src/: dock_js_bridge_api.h  harness_main.cpp  ipc_client.cpp  ipc_client.h  obs_browser_dock_host_scaffold.cpp  obs_browser_dock_host_scaffold.h  obs_plugin_entry.cpp  shim_runtime.cpp  shim_runtime.h
obs-telemetry-bridge/: Cargo.toml  README.md  grafana-dashboard-template.json
obs-telemetry-bridge/.github/workflows/: ci.yml
obs-telemetry-bridge/assets/: grafana-dashboard.json
obs-telemetry-bridge/installer/: setup.iss
obs-telemetry-bridge/src/: main.rs
obs-telemetry-bridge/src/aegis/: mod.rs
obs-telemetry-bridge/src/app/: mod.rs
obs-telemetry-bridge/src/config/: mod.rs
obs-telemetry-bridge/src/exporters/: mod.rs
obs-telemetry-bridge/src/ipc/: mod.rs
obs-telemetry-bridge/src/metrics/: mod.rs
obs-telemetry-bridge/src/model/: mod.rs
obs-telemetry-bridge/src/security/: mod.rs
obs-telemetry-bridge/src/server/: mod.rs
obs-telemetry-bridge/src/startup/: mod.rs
obs-telemetry-bridge/src/tray/: mod.rs
